# zeub-test

./: CMakeLists.txt  Kconfig  prj.conf  west.yml
boards/arm/zeub/: Kconfig  Kconfig.board  Kconfig.defconfig  zeub.dts  zeub.yaml  zeub_defconfig
drivers/: CMakeLists.txt  Kconfig  kscan_gpio_direct.c
drivers/battery/: CMakeLists.txt  Kconfig.defconfig  battery_voltage_divider.c
drivers/ec11/: Kconfig  ec11.c  ec11.h
drivers/zephyr/dts/bindings/kscan/: zeub,kscan-gpio-direct.yaml
drivers/zephyr/dts/bindings/sensor/: alps,ec11.yaml  zeub,battery-voltage-divider.yaml
src/: disp.c  main.c
